--- a/FortniteLauncher/MainWindow.xaml
+++ b/FortniteLauncher/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FortniteLauncher"
         mc:Ignorable="d"
-        Title="MainWindow" Height="291" Width="381"
+        Title="FortniteLauncher" Height="291" Width="381" ResizeMode="CanMinimize"
     xmlns:ui="http://schemas.modernwpf.com/2019"
         ui:WindowHelper.UseModernWindowStyle="True">
     <ui:SimpleStackPanel>
@@ -14,6 +14,10 @@
                 <ui:TabItemHelper.Icon>
                     <ui:SymbolIcon Symbol="Play" />
                 </ui:TabItemHelper.Icon>
+                <Grid Height="232">
+                    <Label HorizontalAlignment="Right" Margin="0,10,278,200" Width="93">Fortnite path:</Label>
+                    <TextBox Margin="103,5,10,195"/>
+                </Grid>
             </TabItem>
             <TabItem Header="LawinServer">
                 <ui:TabItemHelper.Icon>
