--- a/FortniteLauncher/MainWindow.xaml
+++ b/FortniteLauncher/MainWindow.xaml
@@ -20,10 +20,10 @@
                     <Label HorizontalAlignment="Left" Margin="12,112,0,113" Width="94">Client 6-9.10</Label>
                     <Label HorizontalAlignment="Left" Margin="12,146,0,78" Width="106">Client 9.40-10.40</Label>
                     <TextBox Margin="103,10,10,205" FontSize="14" x:Name="PathBOx"/>
-                    <Button Content="LAUNCH!" Margin="0,177,0,0" VerticalAlignment="Top" Height="45" Width="411" HorizontalAlignment="Center"/>
-                    <CheckBox Content="" Margin="120,74,0,0" VerticalAlignment="Top" Width="20"/>
-                    <CheckBox Content="" Margin="120,138,0,0" VerticalAlignment="Top" Width="37"/>
-                    <CheckBox Content="" Margin="120,106,0,0" VerticalAlignment="Top" Width="37"/>
+                    <Button x:Name="LaunchBtn" Click="LaunchBtn_Click" Content="LAUNCH!" Margin="0,177,0,0" VerticalAlignment="Top" Height="45" Width="411" HorizontalAlignment="Center"/>
+                    <CheckBox x:Name="Client_onetofilve" Content="" Margin="120,74,0,0" VerticalAlignment="Top" Width="20"/>
+                    <CheckBox x:Name="Client_sixtonineten" Content="" Margin="120,138,0,0" VerticalAlignment="Top" Width="37"/>
+                    <CheckBox x:Name="Client_nintefortytotenforty" Content="" Margin="120,106,0,0" VerticalAlignment="Top" Width="37"/>
                     <Button x:Name="ExploreBtn" Click="ExploreBtn_Click" Content="Explore" Margin="302,48,0,0" VerticalAlignment="Top" Width="120"/>
                     <Image x:Name="SeasonImage" Height="121" Margin="162,48,140,0" VerticalAlignment="Top" Width="131"/>
                 </Grid>
