--- a/FortniteLauncher/MainWindow.xaml
+++ b/FortniteLauncher/MainWindow.xaml
@@ -49,9 +49,10 @@
                     <ui:SymbolIcon Symbol="ContactInfo" />
                 </ui:TabItemHelper.Icon>
                 <Grid Height="248">
-                    <Button Background="{DynamicResource BG}" Content="Delete Server" x:Name="DeleteServerBtn" Click="DeleteServerBtn_Click" Margin="10,206,0,0" VerticalAlignment="Top"/>
-                    <Button Content="Open FileSystem" Margin="115,206,0,0" VerticalAlignment="Top" Width="153"/>
-                    <Button Content="Fix not starting" x:Name="FixBtn" Click="FixBtn_Click" Margin="273,206,0,0" VerticalAlignment="Top" Width="150"/>
+                    <Button Background="{DynamicResource BG}" Content="Delete Server" x:Name="DeleteServerBtn" Click="DeleteServerBtn_Click" Margin="25,174,0,0" VerticalAlignment="Top"/>
+                    <Button Content="Open FileSystem" Margin="130,174,0,0" VerticalAlignment="Top" Width="136"/>
+                    <Button Content="Fix not starting" x:Name="FixBtn" Click="FixBtn_Click" Margin="271,174,0,0" VerticalAlignment="Top" Width="131"/>
+                    <TextBlock Text="VersionHere" x:Name="VersionBox" Margin="126,211,163,15" FontWeight="Bold"/>
                 </Grid>
             </TabItem>
         </TabControl>
