--- a/FortniteLauncher/MainWindow.xaml
+++ b/FortniteLauncher/MainWindow.xaml
@@ -39,6 +39,7 @@
                     <CheckBox x:Name="PartiesCheckBox" Checked="CheckBox_Checked" Unchecked="CheckBox_Unchecked" Content="Use Parties XMPP" Margin="10,161,0,0" VerticalAlignment="Top"/>
                     <Button Content="Start!" Margin="225,161,0,0" VerticalAlignment="Top" Width="198" x:Name="StartBtn" Click="StartBtn_Click" />
                     <TextBlock x:Name="CurrentStatus" HorizontalAlignment="Left" Margin="225,105,0,0" TextWrapping="Wrap" Text="  " VerticalAlignment="Top" Width="198"/>
+                    <CheckBox x:Name="IncludedProxyUSE" Checked="IncludedProxyUSE_Checked" Content="Use included Proxy" Margin="10,193,0,0" VerticalAlignment="Top" Width="136"/>
                 </Grid>
             </TabItem>
             <TabItem Header="About">
